--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "Chatpta team",
   "license": "ISC",
   "devDependencies": {
-    "mocha": "^9.1.3"
+    "mocha": "^9.1.3",
+    "supertest": "^6.1.6"
   },
   "dependencies": {
+    "express": "^4.17.2"
   }
 }
