--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@chatpta/common-util",
-  "version": "3.1.1",
-  "repository": "https://github.com/chatpta/common-util",
+  "version": "3.1.15",
+  "repository": "https://github.com/chatpta/pkg-common-util",
   "description": "Common utility for MVC framework",
   "main": "index.js",
   "scripts": {
@@ -14,7 +14,7 @@
   "author": "Chatpta team",
   "license": "ISC",
   "devDependencies": {
-    "mocha": "^9.1.3",
+    "mocha": "10.1.0",
     "supertest": "^6.1.6"
   },
   "dependencies": {
